[gd_scene load_steps=4 format=3 uid="uid://i4nnwgwck615"]

[ext_resource type="Script" path="res://src/ui_components/visual_formation/visual_formation.gd" id="1"]
[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://themes/default/theme.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://b2mwv4cl5sm6t" path="res://src/ui_components/swtich_option_button/switch_option_button.tscn" id="4_bi7d8"]

[node name="VisualFormation" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")
script = ExtResource("1")

[node name="Tactics" type="GridContainer" parent="."]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="Label" type="Label" parent="Tactics"]
layout_mode = 2
size_flags_horizontal = 3
text = "FORMATION"

[node name="FormationSelect" parent="Tactics" instance=ExtResource("4_bi7d8")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Tactics"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="Tactics"]
layout_mode = 2

[node name="Label2" type="Label" parent="Tactics"]
layout_mode = 2
size_flags_horizontal = 3
text = "TACTIC_OFFENSE"

[node name="TacticSelectOffense" parent="Tactics" instance=ExtResource("4_bi7d8")]
layout_mode = 2

[node name="Label3" type="Label" parent="Tactics"]
layout_mode = 2
size_flags_horizontal = 3
text = "INTENSITY"

[node name="TacticOffenseIntensity" type="HSlider" parent="Tactics"]
layout_mode = 2
step = 10.0

[node name="HSeparator2" type="HSeparator" parent="Tactics"]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="Tactics"]
layout_mode = 2

[node name="Label4" type="Label" parent="Tactics"]
layout_mode = 2
size_flags_horizontal = 3
text = "MARKING"

[node name="TacticSelectMarking" parent="Tactics" instance=ExtResource("4_bi7d8")]
layout_mode = 2

[node name="Label5" type="Label" parent="Tactics"]
layout_mode = 2
text = "PRESSING"

[node name="TacticSelectPressing" parent="Tactics" instance=ExtResource("4_bi7d8")]
layout_mode = 2

[node name="LineUp" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Attack" type="HBoxContainer" parent="LineUp"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Center" type="HBoxContainer" parent="LineUp"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Defense" type="HBoxContainer" parent="LineUp"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Goalkeeper" type="HBoxContainer" parent="LineUp"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Subs" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
follow_focus = true

[node name="List" type="VBoxContainer" parent="Subs"]
layout_mode = 2
alignment = 1

[connection signal="item_selected" from="Tactics/FormationSelect" to="." method="_on_formation_button_item_selected"]
[connection signal="item_selected" from="Tactics/TacticSelectOffense" to="." method="_on_tactic_select_offense_item_selected"]
[connection signal="value_changed" from="Tactics/TacticOffenseIntensity" to="." method="_on_tactic_offense_intensity_value_changed"]
[connection signal="item_selected" from="Tactics/TacticSelectMarking" to="." method="_on_tactic_select_marking_item_selected"]
[connection signal="item_selected" from="Tactics/TacticSelectPressing" to="." method="_on_tactic_select_pressing_item_selected"]
